--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="header-content">
         <div class="logo">
-          <div class="logo-icon" aria-hidden="true">🌿</div>
+          <div class="logo-icon" aria-hidden="true"></div>
           <div class="logo-text">
             <h1>SIGETA</h1>
             <p>Sistem IoT Gas Effectiveness Tawas</p>
