Fix index.html merge conflict

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="header-content">
         <div class="logo">
-          <div class="logo-icon" aria-hidden="true">🌿</div>
+          <div class="logo-icon" aria-hidden="true"></div>
           <div class="logo-text">
             <h1>SIGETA</h1>
             <p>Sistem IoT Gas Effectiveness Tawas</p>
@@ -150,7 +150,7 @@
           <h3>SIGETA</h3>
         </div>
         <p>Sistem IoT Gas Effectiveness Tawas - Solusi Pintar untuk Toilet yang Lebih Sehat</p>
-        <p>&copy; 2023 SIGETA. All rights reserved.</p>
+        <p>&copy; 2025 SIGETA. All rights reserved.</p>
       </div>
     </div>
   </footer>
