--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <div aria-hidden="true">🌿</div>
+          <div aria-hidden="true"></div>
           <h3>SIGETA</h3>
         </div>
         <p>Sistem IoT Gas Effectiveness Tawas - Solusi Pintar untuk Toilet yang Lebih Sehat</p>
